<resources>
    <string name="app_name">LocationGetter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Войти</string>
    <string name="already_have_acc">Есть аккаунт?</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="type_password_hint">Введите пароль</string>
    <string name="type_email_hint">Введите email</string>
    <string name="type_user_name">Введите имя фамилию</string>
</resources>