<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/registrateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo3">

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerInParent="true"

            android:background="@drawable/rounded_edittext_states"
            android:drawableStart="@drawable/ic_account_box"
            android:drawablePadding="-11dp"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/type_user_name"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editRegEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_states"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="-11dp"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/type_email_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editRegPassword"
            android:layout_width="317dp"
            android:layout_height="46dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_edittext_states"
            android:drawableStart="@drawable/ic_password_lock"
            android:drawablePadding="-11dp"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="Введите пароль"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrateButton"
        app:layout_constraintVertical_bias="0.205" />

    <TextView
        android:id="@+id/showLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/login"
        android:textColor="#0000ff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrateButton" />

    <Button
        android:id="@+id/registrateButton"
        android:layout_width="226dp"
        android:layout_height="54dp"
        android:text="@string/registrate"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/appLogo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149"
        app:srcCompat="@drawable/ic_app_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>